# switchboard

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
schemas/: __init__.py  base.py  input.py  output.py  provider.py  registry.py  types.py
schemas/claude/: input.py  output.py
schemas/gemini/: input.py  output.py
schemas/native/: __init__.py  input.py  output.py
schemas/openai/: input.py  output.py
switchboard/: __init__.py  client.py
tests/: test_client.py  test_input.py  test_output.py  test_schema.py  test_streaming.py
