[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "switchboard"
version = "0.1.0"
description = "Schema-agnostic LLM router"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
httpx = ["httpx>=0.27"]
requests = ["requests>=2.31"]

[tool.setuptools.packages.find]
where = ["."]
include = ["switchboard*", "schemas*"]
